--- a/index.html
+++ b/index.html
@@ -1451,7 +1451,8 @@ src: url(data:application/font-sfnt;base64,AAEAAAARAQAABAAQR0RFRgs+Cz8AAjwQAAAAQ
         <nav role="navigation" id="toc">
           <ul>
           <li><a href="#about-me">About me</a></li>
-          <li><a href="#key-publications">Key Publications</a></li>
+          <li><a href="#key-publications-and-preprints">Key Publications
+          and Preprints</a></li>
           <li><a href="#resources">Resources</a></li>
           <li><a href="#contact">Contact</a></li>
           </ul>
@@ -1485,56 +1486,53 @@ src: url(data:application/font-sfnt;base64,AAEAAAARAQAABAAQR0RFRgs+Cz8AAjwQAAAAQ
 research fellow</a> at Harvard School of Public Health and Brigham and
 Women’s Hospital, exploring network models for multiomic data.</p>
 </div>
-<div id="key-publications" class="section level2">
-<h2>Key Publications</h2>
+<div id="key-publications-and-preprints" class="section level2">
+<h2>Key Publications and Preprints</h2>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2104.01690">DRAGON</a> is a new
-tool for multi-omic Gaussian graphical modeling. DRAGON lives in the <a href="https://netzoo.github.io/">Network Zoo</a> and is available as
-part of <a href="https://netzoopy.readthedocs.io/en/latest/">netZooPy</a>.
-Citation: <strong>Shutta, K.H.</strong><sup>+</sup>, Weighill,
-D.<sup>+</sup>, Burkholz, R., Guebila, M.B., Zacharias, H.U.,
-Quackenbush, J. and Altenbuchinger, M., <strong>2022</strong>. DRAGON:
-determining regulatory associations using graphical models on multi-omic
-networks. <em>arXiv preprint</em> arXiv:2104.01690. <sup>+</sup>: equal
-contribution</p></li>
-<li><p>Our recent <a href="https://onlinelibrary.wiley.com/doi/10.1002/sim.9546">tutorial</a>
-on Gaussian graphical models is a great starting point for applied
-statisticians to get up and running with GGM analyses. You can find a
-stand-alone RMarkdown document with the tutorial code <a href="https://github.com/katehoffshutta/ggmTutorial">here</a>. Citation:
-<strong>Shutta, K.H.</strong>, De Vito, R., Scholtens, D.M. and
-Balasubramanian, R., <strong>2022</strong>. Gaussian graphical models
-with applications to omics analyses. <em>Statistics in
-medicine.</em></p></li>
-<li><p><a href="https://doi.org/10.1101/2021.07.13.452248">SpiderLearner</a> is an
-ensemble approach we’ve developed for estimating Gaussian graphical
-models. Citation: <strong>Shutta, K.H.</strong>, Balzer, L.B.,
-Scholtens, D.M. and Balasubramanian, R., <strong>2021</strong>.
-SpiderLearner: An ensemble approach to Gaussian graphical model
-estimation. <em>bioRxiv,</em> <a href="https://doi.org/10.1101/2021.07.13.452248" class="uri">https://doi.org/10.1101/2021.07.13.452248</a>.</p></li>
-<li><p>We have identified and validated <a href="https://doi.org/10.1016/j.psyneuen.2021.105420">11 metabolites
-associated with chronic psychosocial distress</a> using data from the
-NHS, NHSII, and WHI. Citation: <strong>Shutta, K.H.</strong>
+<li><p><a href="https://arxiv.org/abs/2104.01690" target="_blank">DRAGON</a> is a new tool for multi-omic Gaussian
+graphical modeling. DRAGON lives in the <a href="https://netzoo.github.io/" target="_blank">Network Zoo</a> and is
+available as part of <a href="https://netzoopy.readthedocs.io/en/latest/" target="_blank">netZooPy</a>. Citation: <strong>Shutta,
+K.H.</strong><sup>+</sup>, Weighill, D.<sup>+</sup>, Burkholz, R.,
+Guebila, M.B., Zacharias, H.U., Quackenbush, J. and Altenbuchinger, M.,
+<strong>2022</strong>. DRAGON: determining regulatory associations using
+graphical models on multi-omic networks. <em>arXiv,</em> <a href="https://doi.org/10.48550/arXiv.2104.01690" class="uri">https://doi.org/10.48550/arXiv.2104.01690</a>. <sup>+</sup>:
+equal contribution</p></li>
+<li><p>Our recent <a href="https://onlinelibrary.wiley.com/doi/10.1002/sim.9546" target="_blank">tutorial</a> on Gaussian graphical models is a great
+starting point for applied statisticians to get up and running with GGM
+analyses. You can find a stand-alone RMarkdown document with the
+tutorial code <a href="https://github.com/katehoffshutta/ggmTutorial" target="_blank">here</a>. Citation: <strong>Shutta, K.H.</strong>, De
+Vito, R., Scholtens, D.M. and Balasubramanian, R.,
+<strong>2022</strong>. Gaussian graphical models with applications to
+omics analyses. <em>Statistics in medicine.</em> <a href="https://doi.org/10.1002/sim.9546" class="uri">https://doi.org/10.1002/sim.9546</a></p></li>
+<li><p><a href="https://doi.org/10.1101/2021.07.13.452248" target="_blank">SpiderLearner</a> is an ensemble approach we’ve
+developed for estimating Gaussian graphical models. Citation:
+<strong>Shutta, K.H.</strong>, Balzer, L.B., Scholtens, D.M. and
+Balasubramanian, R., <strong>2021</strong>. SpiderLearner: An ensemble
+approach to Gaussian graphical model estimation. <em>bioRxiv,</em> <a href="https://doi.org/10.1101/2021.07.13.452248" class="uri">https://doi.org/10.1101/2021.07.13.452248</a>.</p></li>
+<li><p>We have identified and validated <a href="https://doi.org/10.1016/j.psyneuen.2021.105420" target="_blank">11
+metabolites associated with chronic psychosocial distress</a> using data
+from the NHS, NHSII, and WHI. Citation: <strong>Shutta, K.H.</strong>
 <sup>+</sup>, Balasubramanian, R. <sup>+</sup>, Huang, T., Jha, S.C.,
 Zeleznik, O.A., Kroenke, C.H., Tinker, L.F., Smoller, J.W., Casanova,
 R., Tworoger, S.S., Manson, J.E., Clish, C.B., Rexrode, K.M., Hankinson,
 S.E.<sup>++</sup>, and Kubzansky, L.D.<sup>++</sup>,
 <strong>2021</strong>. Plasma metabolomic profiles associated with
 chronic distress in women. <em>Psychoneuroendocrinology</em>, 133,
-p.105420. <sup>+</sup>, <sup>++</sup>: equal contribution</p></li>
+p.105420. <a href="https://doi.org/10.1016/j.psyneuen.2021.105420" class="uri">https://doi.org/10.1016/j.psyneuen.2021.105420</a>.<sup>+</sup>,
+<sup>++</sup>: equal contribution</p></li>
 </ul>
 </div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
-<li><p><a href="https://katehoffshutta.github.io/web/SpiderLearner/SpiderLearnerQuickStart.html">SpiderLearner
-Quickstart Guide</a></p></li>
-<li><p><a href="https://katehoffshutta.github.io/tutorials/20220311_dingoTutorial.html">DIfferential
-Network analysis in GenOmics (DINGO) Tutorial</a></p></li>
+<li><p><a href="https://katehoffshutta.github.io/web/SpiderLearner/SpiderLearnerQuickStart.html" target="_blank">SpiderLearner Quickstart Guide</a></p></li>
+<li><p><a href="https://katehoffshutta.github.io/tutorials/20220311_dingoTutorial.html" target="_blank">DIfferential Network analysis in GenOmics (DINGO)
+Tutorial</a></p></li>
 </ul>
 </div>
 <div id="contact" class="section level2">
 <h2>Contact</h2>
-<p><a href="mailto:kshutta@hsph.harvard.edu" class="email">kshutta@hsph.harvard.edu</a></p>
+<p>kshutta at hsph.harvard.edu</p>
 </div>
 
    
