added DRAGON talk

--- a/index.html
+++ b/index.html
@@ -1453,6 +1453,8 @@ src: url(data:application/font-sfnt;base64,AAEAAAARAQAABAAQR0RFRgs+Cz8AAjwQAAAAQ
           <li><a href="#about-me">About me</a></li>
           <li><a href="#key-publications-and-preprints">Key Publications
           and Preprints</a></li>
+          <li><a href="#recent-presentations">Recent
+          Presentations</a></li>
           <li><a href="#resources">Resources</a></li>
           <li><a href="#contact">Contact</a></li>
           </ul>
@@ -1520,6 +1522,13 @@ S.E.<sup>++</sup>, and Kubzansky, L.D.<sup>++</sup>,
 chronic distress in women. <em>Psychoneuroendocrinology</em>, 133,
 p.105420. <a href="https://doi.org/10.1016/j.psyneuen.2021.105420" class="uri">https://doi.org/10.1016/j.psyneuen.2021.105420</a>.<sup>+</sup>,
 <sup>++</sup>: equal contribution</p></li>
+</ul>
+</div>
+<div id="recent-presentations" class="section level2">
+<h2>Recent Presentations</h2>
+<ul>
+<li><a href="https://katehoffshutta.github.io/web/presentations/20220722_NetBioMed_DRAGON.pdf" target="_blank">DRAGON</a>, presented at <a href="https://sites.google.com/channing.harvard.edu/netbiomed2022" target="_blank">NetBioMed 2022</a>, a satellite of the <a href="https://netsci2022.net/" target="_blank">NetSci 2022</a>
+conference</li>
 </ul>
 </div>
 <div id="resources" class="section level2">
