--- a/index.html
+++ b/index.html
@@ -1491,6 +1491,14 @@ Women’s Hospital, exploring network models for multiomic data.</p>
 <div id="key-publications-and-preprints" class="section level2">
 <h2>Key Publications and Preprints</h2>
 <ul>
+<li><p>Check out our new preprint on <a href="https://arxiv.org/abs/2210.12837" target="_blank">graphical
+modeling of multi-study data</a>! Our method builds on the <a href="https://doi.org/10.1111/biom.12974" target="_blank">multi-study
+factor analysis (MSFA) method</a> of <a href="https://rdevito.github.io/web/" target="_blank">Roberta De
+Vito</a> and her colleagues. We use latent variables to estimate shared
+and condition-specific Gaussian graphical models. Citation:
+<strong>Shutta, K.H.</strong>, Scholtens, D.M., Lowe Jr., W.L.,
+Balasubramanian, R., and De Vito, R., <strong>2022</strong>
+<em>arXiv,</em> <a href="https://doi.org/10.48550/arXiv.2210.12837" class="uri">https://doi.org/10.48550/arXiv.2210.12837</a></p></li>
 <li><p><a href="https://arxiv.org/abs/2104.01690" target="_blank">DRAGON</a> is a new tool for multi-omic Gaussian
 graphical modeling. DRAGON lives in the <a href="https://netzoo.github.io/" target="_blank">Network Zoo</a> and is
 available as part of <a href="https://netzoopy.readthedocs.io/en/latest/" target="_blank">netZooPy</a>. Citation: <strong>Shutta,
