added presentation resources from CSP 2024

--- a/index.html
+++ b/index.html
@@ -1535,6 +1535,8 @@ p.105420. <a href="https://doi.org/10.1016/j.psyneuen.2021.105420" class="uri">h
 <div id="recent-presentations" class="section level2">
 <h2>Recent Presentations</h2>
 <ul>
+<li><a href="https://katehoffshutta.github.io/presentations/2024_CSP_Tutorial_Slides.pdf" target="_blank">A tutorial on the <code>icensmis</code> package</a>,
+presented at the <a href="https://ww2.amstat.org/meetings/csp/2024/" target="_blank">ASA Conference on Statistical Practice 2024</a></li>
 <li><a href="https://katehoffshutta.github.io/presentations/20220722_NetBioMed_DRAGON.pdf" target="_blank">DRAGON</a>, presented at <a href="https://sites.google.com/channing.harvard.edu/netbiomed2022" target="_blank">NetBioMed 2022</a>, a satellite of the <a href="https://netsci2022.net/" target="_blank">NetSci 2022</a>
 conference</li>
 </ul>
@@ -1542,6 +1544,9 @@ conference</li>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
+<li><p><a href="https://katehoffshutta.github.io/web/icensmis/20240229_CSP_selfreports.html" target="_blank">CSP 2024: Demonstration of <code>icensmis</code> for
+self-reported, error-prone time-to-event outcomes</a> The un-knit
+RMarkdown is also available <a href="https://katehoffshutta.github.io/web/icensmis/20240229_CSP_selfreports.Rmd">here</a>.</p></li>
 <li><p><a href="https://katehoffshutta.github.io/web/SpiderLearner/SpiderLearnerQuickStart.html" target="_blank">SpiderLearner Quickstart Guide</a></p></li>
 <li><p><a href="https://katehoffshutta.github.io/tutorials/20220311_dingoTutorial.html" target="_blank">DIfferential Network analysis in GenOmics (DINGO)
 Tutorial</a></p></li>
