added recent papers

--- a/index.html
+++ b/index.html
@@ -1491,6 +1491,36 @@ Women’s Hospital, exploring network models for multiomic data.</p>
 <div id="key-publications-and-preprints" class="section level2">
 <h2>Key Publications and Preprints</h2>
 <ul>
+<li>I’m proud to have contributed to two recent publications that use
+metabolomics to understand the relationship between mental health and
+cardiometabolic health! This work was supported by the NIH NIA (award
+number <a href="https://reporter.nih.gov/search/6QSl7r5uPU6hV3i_mMNLCw/projects?shared=true" target="_blank">R01-AG051600</a>).
+<ul>
+<li><a href="https://doi.org/10.1016/j.bbi.2023.08.010" target="_blank"><em>Mental health and incident cardiovascular
+disease</em></a> Balasubramanian, R., <strong>Shutta, K. H.</strong>,
+Guasch-Ferre, M., Huang, T., Jha, S. C., Zhu, Y., … Hankinson, S.E.,
+&amp; Kubzansky, L. D. (<strong>2023</strong>). Metabolomic profiles of
+chronic distress are associated with cardiovascular disease risk and
+inflammation-related risk factors. Brain, Behavior, and Immunity, 114,
+262-274. <a href="https://doi.org/10.1016/j.bbi.2023.08.010" class="uri">https://doi.org/10.1016/j.bbi.2023.08.010</a></li>
+<li><a href="https://doi.org/10.1210/clinem/dgad731" target="_blank"><em>Mental health and diabetes risk</em></a> Huang, T.,
+Zhu, Y., <strong>Shutta, K. H.</strong>, Balasubramanian, R., Zeleznik,
+O. A., Rexrode, K. M., … Kubzansky, L.D., &amp; Hankinson, S. E.
+(<strong>2023</strong>). A Plasma Metabolite Score Related to
+Psychological Distress and Diabetes Risk: A Nested Case-control Study in
+US Women. The Journal of Clinical Endocrinology &amp; Metabolism,
+dgad731. <a href="https://doi.org/10.1210/clinem/dgad731" class="uri">https://doi.org/10.1210/clinem/dgad731</a></li>
+</ul></li>
+</ul>
+<ul>
+<li><p>SpiderLearner was recently published in Statistics in Medicine!
+Our <a href="https://katehoffshutta.github.io/web/SpiderLearner/SpiderLearnerQuickStart.html" target="_blank">SpiderLearner Quickstart Guide</a> will get you up and
+running with the corresponding R package <code>ensembleGGM</code> in
+just a few minutes. We are always looking for feedback via the <a href="https://github.com/katehoffshutta/ensembleGGM" target="_blank"><code>ensembleGGM</code> Github repository</a>!
+Citation: <strong>Shutta, K. H.</strong>, Balzer, L. B., Scholtens, D.
+M., &amp; Balasubramanian, R. (<strong>2023</strong>). SpiderLearner: An
+ensemble approach to Gaussian graphical model estimation. Statistics in
+Medicine, 42(13), 2116-2133. <a href="https://doi.org/10.1002/sim.9714" class="uri">https://doi.org/10.1002/sim.9714</a></p></li>
 <li><p>Check out our new preprint on <a href="https://arxiv.org/abs/2210.12837" target="_blank">graphical
 modeling of multi-study data</a>! Our method builds on the <a href="https://doi.org/10.1111/biom.12974" target="_blank">multi-study
 factor analysis (MSFA) method</a> of <a href="https://rdevito.github.io/web/" target="_blank">Roberta De
